1. have started organising the code to be more like a production codebase 2. Have started implementing the evaluator 3. Have got the initial, basic syntax populating the AST 4. Have got the memento working (can use it to store a historical record of the changes made to a dataset)

--- a/semantic_model/test_data_semantic_model.ipynb
+++ b/semantic_model/test_data_semantic_model.ipynb
@@ -2,37 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true,
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-71098e4a2fb7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msemantic_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mData\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/Birkbeck_masters/Project/dsl_for_data_analysis/semantic_model/data.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mseaborn\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconst\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mNUMERIC_DATATYPES\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: attempted relative import beyond top-level package"
-     ],
-     "ename": "ValueError",
-     "evalue": "attempted relative import beyond top-level package",
-     "output_type": "error"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from .data import Data\n"
+    "from semantic_model.data import Data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "outputs": [],
    "source": [
-    "d = Data('iris.csv')\n"
+    "d = Data('../examples/iris.csv')\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -44,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
@@ -67,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "outputs": [
     {
      "data": {
@@ -76,7 +64,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 4
+     "execution_count": 21
     }
    ],
    "source": [
@@ -92,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "outputs": [
     {
      "data": {
@@ -100,7 +88,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 5
+     "execution_count": 22
     }
    ],
    "source": [
@@ -116,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "outputs": [
     {
      "data": {
@@ -124,12 +112,11 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 6
+     "execution_count": 23
     }
    ],
    "source": [
     "d.count()\n",
-    "\n",
     "\n"
    ],
    "metadata": {
@@ -142,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "outputs": [
     {
      "name": "stdout",
@@ -165,15 +152,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "outputs": [
     {
      "data": {
-      "text/plain": "<data.Data at 0x11ff34c10>"
+      "text/plain": "<semantic_model.data.Data at 0x121e63cd0>"
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 8
+     "execution_count": 25
     }
    ],
    "source": [
@@ -189,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "outputs": [
     {
      "name": "stdout",
@@ -212,15 +199,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "outputs": [
     {
      "data": {
-      "text/plain": "<data.Data at 0x11ff34c10>"
+      "text/plain": "<semantic_model.data.Data at 0x121e63cd0>"
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 10
+     "execution_count": 27
     }
    ],
    "source": [
@@ -236,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "outputs": [
     {
      "data": {
@@ -244,11 +231,129 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 11
+     "execution_count": 28
     }
    ],
    "source": [
     "d.get_columns()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [],
+   "source": [
+    "from semantic_model.memento import *"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [],
+   "source": [
+    "o = DataOriginator(d)\n",
+    "c = Caretaker(o)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [],
+   "source": [
+    "c.backup()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [],
+   "source": [
+    "o.set_state(d.map(d.get_columns()[0], lambda x: x + 1))\n",
+    "c.backup()\n",
+    "    \n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Unnamed: 0      150\nsepal_length    150\nsepal_width     150\npetal_length    150\npetal_width     150\nspecies         150\ndtype: int64",
+      "\nUnnamed: 0      2\nsepal_length    2\nsepal_width     2\npetal_length    2\npetal_width     2\nspecies         2\ndtype: int64\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "print(d.count())\n",
+    "o.set_state(d.filter(d.get_columns()[0], lambda x: x <3))\n",
+    "print(d.count())\n",
+    "c.backup()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "0-None\n1-None\n2-None\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "c.show_history()\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
